fix: Dropdown items aligned to right

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -222,6 +222,8 @@ body {
 
   .navbar-item.is-hoverable:hover .navbar-dropdown {
     display: block;
+    left: auto;
+    right: 0;
   }
 
   .navbar-link::after {
